<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent" android:layout_marginTop="1dp">


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/formCadastro"
             android:textColor="@color/colorAccent"
             android:textSize="25dp"
             android:textStyle="bold"
              />
         <ImageView
             android:id="@+id/iv"
             android:scaleType="fitXY"
             android:layout_width="300dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/cameraholder"
             android:layout_height="300dp" />

         <android.support.design.widget.TextInputLayout
             android:id="@+id/inputRotulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <EditText
                 android:hint="@string/inputRotulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/inputCervejaria"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <EditText
                 android:hint="@string/inputCervejaria"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/inputPais"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <EditText
                 android:hint="@string/inputPais"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/inputAlcool"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <EditText
                 android:hint="@string/inputAlcool"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <Spinner
             android:id="@+id/inputTipo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:spinnerMode="dropdown"/>
         </android.support.design.widget.TextInputLayout>

     </LinearLayout>

 </ScrollView>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnDeletar" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSalvar" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>