<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".ui.UserActivity"
    android:padding="25dp">

    <TextView
        android:id="@+id/cadtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/titleuser"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/cadtitle"
        android:hint="email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtEmail"
        android:layout_alignRight="@+id/txtEmail"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="38dp"
        android:hint="@string/senha"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtPass"
        android:layout_marginTop="38dp"
        android:text="@string/cadastrar" />

</RelativeLayout>